# all-hail-plankton

./: CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
